# timemoji

./: Cargo.toml  README.md
src/: clockmoji.rs  main.rs  moonmoji.rs
